--- a/TestKard/UI/Cell/TransactionCell.xib
+++ b/TestKard/UI/Cell/TransactionCell.xib
@@ -15,12 +15,12 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TransactionCell" rowHeight="79" id="KGk-i7-Jjw" customClass="TransactionCell" customModule="TestKard" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="78.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="p1Y-zF-9MB">
-                        <rect key="frame" x="93" y="17.5" width="44" height="50"/>
+                        <rect key="frame" x="93" y="15.5" width="44" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G1O-ec-qCJ">
                                 <rect key="frame" x="0.0" y="0.0" width="44" height="25"/>
@@ -37,7 +37,7 @@
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ujr-tU-TWf">
-                        <rect key="frame" x="235" y="24.5" width="75" height="36"/>
+                        <rect key="frame" x="235" y="22.5" width="75" height="36"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-10.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZS-Fv-nle">
                                 <rect key="frame" x="13" y="7.5" width="49.5" height="20.5"/>
@@ -55,13 +55,13 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M9W-gA-Mk8">
-                        <rect key="frame" x="16" y="10.5" width="64" height="64"/>
+                        <rect key="frame" x="16" y="10.5" width="64" height="60"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FJH-lV-Ifx">
-                                <rect key="frame" x="7" y="7" width="50" height="50"/>
+                                <rect key="frame" x="7" y="5" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="HAF-GK-orc"/>
                                     <constraint firstAttribute="width" secondItem="FJH-lV-Ifx" secondAttribute="height" multiplier="1:1" id="OGx-De-9za"/>
+                                    <constraint firstAttribute="height" constant="50" id="Woy-ew-kUC"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -69,7 +69,7 @@
                         <constraints>
                             <constraint firstItem="FJH-lV-Ifx" firstAttribute="centerY" secondItem="M9W-gA-Mk8" secondAttribute="centerY" id="5UB-FV-3rI"/>
                             <constraint firstItem="FJH-lV-Ifx" firstAttribute="centerX" secondItem="M9W-gA-Mk8" secondAttribute="centerX" id="8kd-ex-XIL"/>
-                            <constraint firstAttribute="width" secondItem="M9W-gA-Mk8" secondAttribute="height" multiplier="1:1" id="qta-gf-7Ug"/>
+                            <constraint firstAttribute="height" constant="60" id="ksM-HD-b2F"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -80,6 +80,7 @@
                     <constraint firstItem="Ujr-tU-TWf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="p1Y-zF-9MB" secondAttribute="trailing" constant="6" id="N6A-OH-guW"/>
                     <constraint firstItem="p1Y-zF-9MB" firstAttribute="centerY" secondItem="M9W-gA-Mk8" secondAttribute="centerY" id="Ooy-CF-ICI"/>
                     <constraint firstAttribute="trailing" secondItem="Ujr-tU-TWf" secondAttribute="trailing" constant="10" id="V0n-ig-0yb"/>
+                    <constraint firstAttribute="bottom" secondItem="M9W-gA-Mk8" secondAttribute="bottom" constant="10" id="W60-LD-adl"/>
                     <constraint firstItem="p1Y-zF-9MB" firstAttribute="height" secondItem="FJH-lV-Ifx" secondAttribute="height" id="lPK-k5-DBU"/>
                     <constraint firstItem="M9W-gA-Mk8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="lqb-gu-A1P"/>
                     <constraint firstItem="p1Y-zF-9MB" firstAttribute="leading" secondItem="FJH-lV-Ifx" secondAttribute="trailing" constant="20" id="sNv-oi-Jwe"/>
